# new-session-manager

./: .gitignore  .gitmodules  AUTHORS  Audio_File.C  Audio_File.H  Audio_File_SF.C  Audio_File_SF.H  Audio_Track.C  Audio_Track.H  Boxtypes.C  Boxtypes.H  CHANGELOG  Clip.C  Clip.H  Control_Point.H  Control_Track.H  DPM.C  DPM.H  Fl_Arc_Dial.H  Fl_Flip_Button.H  Fl_Scalepack.H  Loggable.C  Loggable.H  Makefile  Meter.H  Mixer_Strip.fl  Panner.C  Panner.H  Peaks.C  Peaks.H  README.build  README.md  README.packagers  Region.C  Region.H  Scalebar.H  TODO  TODO.mu  Tempo_Point.H  Tempo_Track.H  (+55 more)
Engine/: Audio_File.C  Audio_File.H  Audio_File_SF.C  Loggable.C  Makefile  Peak_Server.C  Peak_Server.H  Peaks.C  Peaks.H  Server.C  Server.H  Timeline_Server.C  Timeline_Server.H  const.h  main.C  objects.H
FL/: About_Dialog.fl  Boxtypes.C  Boxtypes.H  Clean_Theme.C  Clean_Theme.H  Crystal_Boxtypes.C  Crystal_Boxtypes.H  Crystal_Theme.C  Crystal_Theme.H  Fl_Arc_Dial.C  Fl_Arc_Dial.H  Fl_Blink_Button.H  Fl_Blinker.H  Fl_DialX.C  Fl_DialX.H  Fl_Flip_Button.H  Fl_Flowpack.H  Fl_Labelpad_Group.H  Fl_Menu_Settings.C  Fl_Packscroller.H  Fl_Scalepack.C  Fl_SliderX.C  Fl_SliderX.H  Fl_Sometimes_Input.H  Fl_Sometimes_Pack.H  Fl_Text_Edit_Window.fl  Fl_Theme.C  Fl_Theme.H  Fl_Theme_Chooser.fl  Fl_Value_SliderX.C  Fl_Value_SliderX.H  Gleam_Boxtypes.C  Gleam_Boxtypes.H  Gleam_Theme.C  Gleam_Theme.H  Makefile  New_Project_Dialog.fl  color_scheme.C  color_scheme.H  configure  (+14 more)
FL/util/: ntk-chtheme.C  ntk-perf.C
Mixer/: Chain.C  Chain.H  Controller_Module.C  Controller_Module.H  DPM.C  DPM.H  Gain_Module.C  Gain_Module.H  JACK_Module.C  JACK_Module.H  LADSPAInfo.C  LADSPAInfo.h  Makefile  Meter.H  Meter_Indicator_Module.C  Meter_Indicator_Module.H  Meter_Module.C  Meter_Module.H  Mixer.C  Mixer.H  Mixer_Strip.C  Mixer_Strip.H  Mixer_Strip.fl  Module.C  Module.H  Module_Parameter_Editor.C  Module_Parameter_Editor.H  Mono_Pan_Module.C  Mono_Pan_Module.H  Panner.C  Plugin_Module.C  Plugin_Module.H  Project.C  Project.H  const.h  main.C  makefile.inc
Mixer/Engine/: Engine.C  Engine.H
Timeline/: Annotation_Point.H  Annotation_Region.C  Annotation_Region.H  Annotation_Sequence.H  Audio_File.C  Audio_File.H  Audio_File_SF.C  Audio_File_SF.H  Audio_Region.C  Audio_Region.H  Audio_Sequence.C  Audio_Sequence.H  Audio_Track.C  Audio_Track.H  Clip.H  Clock.H  Control_Point.C  Control_Point.H  Control_Sequence.C  Control_Sequence.H  Control_Track.H  Disk_Stream.C  Disk_Stream.H  Engine.C  Engine.H  Fl_Menu_Settings.C  Fl_Menu_Settings.H  LASH.C  LASH.H  LASH_Client.C  LASH_Client.H  LASH_Engine.C  LASH_Engine.H  Log_Entry.C  Log_Entry.H  Loggable.C  Loggable.H  Makefile  Mutex.H  Peak_Client.C  (+59 more)
Timeline/Engine/: Audio_File.C  Audio_File.H  Audio_File_Dummy.H  Audio_File_SF.C  Audio_File_SF.H  Audio_Region.C  Audio_Sequence.C  Control_Sequence.C  Disk_Stream.C  Disk_Stream.H  Engine.C  Engine.H  Peak.H  Peaks.C  Peaks.H  Playback_DS.C  Playback_DS.H  Port.C  Port.H  Record_DS.C  Record_DS.H  Timeline.C  Track.C  dsp.C  dsp.h
doc/: KEYS.html  KEYS.mu  MANUAL.html  MANUAL.mu  Makefile  OVERVIEW.html  OVERVIEW.mu
doc/non-daw/: MANUAL.html  MANUAL.mu
doc/non-mixer/: MANUAL.html  MANUAL.mu
docs/: CNAME  index.html  release-checklist.txt
docs/api/: LICENSE  api.adoc  index.html  readme.txt
docs/src/: LICENSE  generate.sh  index.adoc  jackpatch.1  jackpatch.h2m  manpage-common.h2m  non-session-manager.1  nsm-legacy-gui.1  nsm-proxy-gui.1  nsm-proxy.1  nsmd.1  readme-00.md  readme-01.md  readme-02.md  test.txt
extras/: README.md
extras/nsm.h/: COPYING  nsm.h
extras/pynsm/: LICENSE  README.md  exampleBoilerplate.py  exampleQt.py  nsmclient.py  test-importResource.py
gui/: Makefile  draw.C  draw.H  event_edit.fl  input.C  ui.fl  widgets.fl
icons/: icon-16x16.xpm
lib/: Makefile
mixer/: Makefile  configure  makefile.inc  non-mixer.desktop.in  nonlib  wscript
mixer/doc/: MANUAL.html  MANUAL.mu  Makefile  OVERVIEW.html  OVERVIEW.mu  mup.css
mixer/icons/: icon-16x16.xpm
mixer/src/: AUX_Module.C  AUX_Module.H  Chain.C  Chain.H  Controller_Module.C  Controller_Module.H  DPM.C  DPM.H  Gain_Module.C  Gain_Module.H  Group.C  Group.H  JACK_Module.C  JACK_Module.H  LADSPAInfo.C  LADSPAInfo.h  Meter.H  Meter_Indicator_Module.C  Meter_Indicator_Module.H  Meter_Module.C  Meter_Module.H  Mixer.C  Mixer.H  Mixer_Strip.C  Mixer_Strip.H  Module.C  Module.H  Module_Parameter_Editor.C  Module_Parameter_Editor.H  Mono_Pan_Module.C  Mono_Pan_Module.H  NSM.C  NSM.H  Panner.C  Panner.H  Plugin_Chooser.C  Plugin_Chooser.H  Plugin_Chooser_UI.fl  Plugin_Module.C  Plugin_Module.H  (+11 more)
nonlib/: Block_Timer.H  Log_Entry.C  Log_Entry.H  Loggable.C  Loggable.H  Makefile  Thread.C  Thread.H  Thread.cpp  Thread.hpp  configure  debug.C  dsp.C  dsp.h  file.C  file.h  makefile.inc  nsm.h  string_util.C  string_util.h  types.h  wscript
nonlib/JACK/: Client.C  Client.H  Port.C  Port.H  makefile.inc
nonlib/LASH/: Client.C  Client.H
nonlib/MIDI/: event.C  event.H  types.h  (+4 more)
pixmaps/: Makefile
scripts/: Makefile  build_id  colors  config-funcs  dist  percent-complete  scan-gpl
sequencer/: configure  makefile.inc  non-sequencer.desktop.in  wscript
session/: Makefile  configure  makefile.inc
session-manager/: FL  Makefile  configure  makefile.inc  non-session-manager.desktop.in  nonlib  wscript
src/: Endpoint.cpp  Endpoint.hpp  NSM_Proxy_UI.fl  Thread.cpp  Thread.hpp  canvas.C  canvas.H  common.h  debug.cpp  debug.h  event.C  event.H  event_list.C  file.cpp  file.h  grid.C  grid.H  jack.C  jack.H  jackpatch.c  lash.C  lash.H  legacy-gui.cpp  main.C  mapping.H  midievent.C  midievent.H  new-session-manager.desktop  non.H  nsm-legacy-gui.cpp  nsm-proxy-gui.cpp  nsm-proxy.cpp  nsm.h  nsmd.cpp  org.jackaudio.jackpatch.desktop  org.jackaudio.nsm-proxy.desktop  org.linuxaudio.new-session-manager.desktop  org.linuxaudio.nsm-legacy-gui.desktop  pattern.C  pattern.H  (+6 more)
timeline/: Makefile  configure  makefile.inc  non-daw.desktop.in  non-timeline.desktop.in  wscript
tools.waf/: ntk_fluid.py
util/: Thread.H  debug.h  file.C  file.h
(+189 files in other folders)
